Fix: about image on mobile

--- a/_includes/assets/css/sass/_layout.scss
+++ b/_includes/assets/css/sass/_layout.scss
@@ -224,6 +224,7 @@ time {
 }
 
 .page-image {
+  align-items: center;
   display: flex;
   grid-row: 1;
   justify-content: center;
